# synalog

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  benchmark.py  plot_benchmark.py  pyproject.toml  test.sh  zensical.toml
.github/workflows/: CI.yml  docs.yml  release.yml
docs/: benchmark.md  cli.md  development.md  differences-datalog.md  differences.md  engines.md  getting-started.md  index.md  knowledge-graphs.md  ontologies.md  playground.md  python-api.md  verification.md
docs/benchmark/: results.json  summary.md
docs/examples/: aggregation.l  axioms.l  axioms.ttl  directives.l  doid_excerpt.txt  functions.l  functors.l  getting_started.l  knowledge_graphs.l  loading_csv.l  ontology.l  ontology.owl  ontology.ttl  program_structure.l  recursion.l  run.py  smoke_tests.csv  syntax.l  temporal.l  verification.l
docs/javascripts/: playground.js  summarize.js
docs/language/: aggregation.md  directives.md  functions.md  functors.md  index.md  recursion.md  syntax.md  temporal.md
docs/stylesheets/: extra.css
python/synalog/: __init__.py  __main__.py  cli.py  config.py  introspect.py  ontology.py  runners.py
python/synalog/template/: .env.template  .gitignore  AGENTS.md  example.l
shell/: build-codemirror.sh  build-wasm.sh  doc.sh  test.sh
skills/synalog/: SKILL.md
skills/synalog/examples/: knowledge_graph.l  recursion.l  sales.l
src/: errors.rs  lib.rs  python.rs  wasm.rs
src/compiler/: annotations.rs  annotations_test.rs  concertina.rs  dialects.rs  dialects_test.rs  expr_translate.rs  expr_translate_test.rs  functors.rs  functors_test.rs  mod.rs  program.rs  program_test.rs  rule_translate.rs  rule_translate_test.rs  universe.rs  universe_test.rs
src/compiler/type_inference/: builder.rs  built_in.rs  edge.rs  expression.rs  graph.rs  inference.rs  intersection.rs  mod.rs  types.rs
src/parser/: json.rs  json_test.rs  mod.rs  parse.rs  parse_test.rs  rewrite.rs  rewrite_test.rs  span.rs  span_test.rs  traverse.rs  traverse_test.rs
src/verifier/: arity.rs  mod.rs  positional.rs  recursion.rs  reserved.rs  safety.rs  sqlexpr.rs  stratification.rs  vars.rs
tests/: compiler_tests.rs  parser_tests.rs  search_tests.rs  verifier_tests.rs
tests/cli/: test_cli.py  test_introspect.py  test_ontology.py  test_runners.py
tests/common/: mod.rs
tests/compiler_tests/: DEVIATIONS.md  generate_expected_sql.py
tests/compiler_tests/bigquery/: 02_arithmetic.sql  03_comparison.sql  04_logical_operators.sql  05_string_operations.sql  06_arrays.sql  07_aggregations_basic.sql  08_aggregations_array.sql  09_argmin_argmax.sql  10_negation.sql  11_disjunction.sql  12_if_then_else.sql  13_functors.sql  15_annotations.sql  16_records.sql  17_outer_join.sql  18_window_functions.sql  19_type_casting.sql  20_list_comprehension.sql  21_rest_of_operator.sql  22_distinct.sql  22_multi_predicate.sql  23_combine.sql  23_set_operations.sql  24_aggregation_groups.sql  25_inline_annotations.sql  25_null_handling.sql  26_builtin_functions.sql  26_string_concat.sql  27_assignment.sql  27_boolean_ops.sql  28_list_membership.sql  28_multi_rule_predicate.sql  29_argmin_argmax.sql  29_subqueries.sql  30_complex_expressions.sql  30_list_aggregations.sql  31_user_functions.sql  32_multiple_aggregations.sql  32_nested_records.sql  33_string_manipulation.sql  (+30 more)
tests/compiler_tests/databricks/: 01_basic_facts.sql  02_arithmetic.sql  03_comparison.sql  04_logical_operators.sql  05_string_operations.sql  06_arrays.sql  07_aggregations_basic.sql  08_aggregations_array.sql  09_argmin_argmax.sql  10_negation.sql  11_disjunction.sql  12_if_then_else.sql  13_functors.sql  15_annotations.sql  17_outer_join.sql  18_window_functions.sql  19_type_casting.sql  20_list_comprehension.sql  20_transitivity.sql  21_complex_joins.sql  22_distinct.sql  22_multi_predicate.sql  23_combine.sql  23_set_operations.sql  24_aggregation_groups.sql  24_json.sql  25_inline_annotations.sql  26_builtin_functions.sql  26_string_concat.sql  27_assignment.sql  27_boolean_ops.sql  28_list_membership.sql  28_multi_rule_predicate.sql  29_argmin_argmax.sql  30_complex_expressions.sql  30_list_aggregations.sql  31_self_join_conditions.sql  31_user_functions.sql  32_multiple_aggregations.sql  32_nested_records.sql  (+29 more)
tests/compiler_tests/duckdb/: 01_basic_facts.sql  02_arithmetic.sql  03_comparison.sql  04_logical_operators.sql  05_string_operations.sql  06_arrays.sql  07_aggregations_basic.sql  08_aggregations_array.sql  09_argmin_argmax.sql  10_negation.sql  11_disjunction.sql  12_if_then_else.sql  13_functors.sql  14_recursion.sql  15_annotations.sql  16_records.sql  17_outer_join.sql  18_window_functions.sql  19_type_casting.sql  20_list_comprehension.sql  20_transitivity.sql  21_complex_joins.sql  21_rest_of_operator.sql  22_distinct.sql  22_multi_predicate.sql  23_combine.sql  23_set_operations.sql  24_aggregation_groups.sql  24_json.sql  25_inline_annotations.sql  25_null_handling.sql  26_builtin_functions.sql  26_string_concat.sql  27_assignment.sql  27_boolean_ops.sql  28_list_membership.sql  28_multi_rule_predicate.sql  29_argmin_argmax.sql  29_subqueries.sql  30_complex_expressions.sql  (+46 more)
tests/compiler_tests/fixtures/: 01_basic_facts.l  02_arithmetic.l  03_comparison.l  04_logical_operators.l  05_string_operations.l  06_arrays.l  07_aggregations_basic.l  08_aggregations_array.l  09_argmin_argmax.l  10_negation.l  11_disjunction.l  12_if_then_else.l  13_functors.l  14_recursion.l  15_annotations.l  16_records.l  17_outer_join.l  18_window_functions.l  19_type_casting.l  20_list_comprehension.l  20_transitivity.l  21_complex_joins.l  21_rest_of_operator.l  22_distinct.l  22_multi_predicate.l  23_combine.l  23_set_operations.l  24_aggregation_groups.l  24_json.l  25_inline_annotations.l  25_null_handling.l  26_builtin_functions.l  26_string_concat.l  27_assignment.l  27_boolean_ops.l  28_list_membership.l  29_argmin_argmax.l  (+65 more)
tests/e2e/: conftest.py  docker-compose.yml  runners.py  test_e2e.py  test_introspect_live.py
tests/parser_tests/: generate_expected_json.py
tests/verifier_tests/: README.md  generate_expected_sql.py
(+371 files in other folders)
