[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "synalog"
version = "1.0.0"
description = "Logic programming for AI agents: Datalog-family language compiling to optimized SQL"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Synalinks" }]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Database",
    "Topic :: Software Development :: Compilers",
]

# duckdb is a core dependency: it is the default engine, so `synalog … run`
# works out of the box on a bare `pip install synalog`, no extra needed.
dependencies = ["click>=8.1", "rich>=13", "duckdb"]

[project.urls]
Repository = "https://github.com/synalinks/synalog"

[project.scripts]
synalog = "synalog.cli:main"

[project.optional-dependencies]
# The local engines work out of the box: duckdb (core dependency, the default)
# and sqlite (stdlib). Each remote engine brings its own driver. `run` keeps the
# PostgreSQL driver for `--engine psql`.
run = ["psycopg"]
trino = ["trino"]
presto = ["presto-python-client"]
databricks = ["databricks-sql-connector"]
bigquery = ["google-cloud-bigquery"]
# Every engine driver at once.
all-engines = [
    "duckdb",
    "psycopg",
    "trino",
    "presto-python-client",
    "databricks-sql-connector",
    "google-cloud-bigquery",
]

[dependency-groups]
# Dev tooling installed by `uv sync`: tests (pytest, duckdb, logica also
# provides the sqlite runtime UDFs), benchmarks (logica, matplotlib), docs
# (zensical builds the site, duckdb runs the examples). The remote-engine
# drivers let the e2e suite reach the docker-compose servers instead of
# skipping them: psycopg→PostgreSQL, trino→Trino, presto→Presto, and
# pyhive+thrift→the Spark Thrift Server (the open-source Databricks stand-in,
# reached over NOSASL).
dev = [
    "pytest",
    "duckdb",
    "logica",
    "matplotlib",
    "zensical",
    "psycopg",
    "trino",
    "presto-python-client",
    "pyhive",
    "thrift",
]

[tool.maturin]
features = ["python", "pyo3/extension-module"]
module-name = "synalog._synalog"
python-source = "python"
# Keep the sdist lean: sources + license + readme only.
exclude = [
    "tests/**",
    "benchmark.py",
    "plot_benchmark.py",
    "benchmark_results.json",
    "benchmark_plots/**",
    "dist/**",
    "/CLAUDE.md",
    "shell/**",
    ".github/**",
]
